cyber-governor/deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cybersecuritygovernor
  labels:
    app.kubernetes.io/part-of: cybersecuritygovernor
