cyber-governor/deploy/base/cg-reconciler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cg-reconciler
  namespace: cybersecuritygovernor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cg-reconciler
  template:
    metadata:
      labels:
        app: cg-reconciler
        cybersecuritygovernor.io/spine-client: "true"
    spec:
      containers:
        - name: cg-reconciler
          image: cybersecuritygovernor/reconciler:latest
          ports:
            - containerPort: 8102
