cyber-governor/deploy/base/cg-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cg-gateway
  namespace: cybersecuritygovernor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cg-gateway
  template:
    metadata:
      labels:
        app: cg-gateway
        cybersecuritygovernor.io/spine-client: "true"
    spec:
      containers:
        - name: cg-gateway
          image: cybersecuritygovernor/gateway:latest
          ports:
            - containerPort: 8100
---
apiVersion: v1
kind: Service
metadata:
  name: cg-gateway
  namespace: cybersecuritygovernor
spec:
  selector:
    app: cg-gateway
  ports:
    - port: 8100
      targetPort: 8100
