cyber-governor/deploy/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cybersecuritygovernor-default
  namespace: cybersecuritygovernor
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cybersecuritygovernor
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cybersecuritygovernor
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: strand-egress-deny-template
  namespace: cybersecuritygovernor
spec:
  podSelector:
    matchLabels:
      cybersecuritygovernor.io/stranded: "true"
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cybersecuritygovernor
      ports:
        - protocol: TCP
          port: 8101
    - ports:
        - protocol: UDP
          port: 53
